@@ -4,8 +4,10 @@
 // Author:
 //
 // 	 Jordi Mas i Hernandez, jordi@ximian.com
+// 	 Peter Dennis Bartok, pbartok@novell.com
 //
-// (C) 2004 Ximian, Inc.  http://www.ximian.com
+// (C) 2003 Ximian, Inc.  http://www.ximian.com
+// (C) 2004-2005 Novell, Inc.  http://www.novell.com
 //
 
 //
@@ -30,11 +32,12 @@
 // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
 // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 //
+using NUnit.Framework;
 using System;
 using System.Drawing;
 using System.Drawing.Imaging;
 using System.Security.Permissions;
-using NUnit.Framework;
+using System.Runtime.InteropServices;
 
 namespace MonoTests.System.Drawing{
 
@@ -72,6 +75,39 @@ namespace MonoTests.System.Drawing{
 			AssertEquals (f.Underline, f2.Underline);
 			AssertEquals (f.Unit, f2.Unit);
 		}
-		
+
+		[ StructLayout(LayoutKind.Sequential, CharSet=CharSet.Unicode) ]
+		class LOGFONT {
+			public int lfHeight = 0;
+			public int lfWidth = 0;
+			public int lfEscapement = 0;
+			public int lfOrientation = 0;
+			public int lfWeight = 0;
+			public byte lfItalic = 0;
+			public byte lfUnderline = 0;
+			public byte lfStrikeOut = 0;
+			public byte lfCharSet = 0;
+			public byte lfOutPrecision = 0;
+			public byte lfClipPrecision = 0;
+			public byte lfQuality = 0;
+			public byte lfPitchAndFamily = 0;
+			[ MarshalAs(UnmanagedType.ByValTStr, SizeConst=32) ]
+			public string lfFaceName = null;
+		}
+
+		[Test]
+		public void TestToLogFont() {
+			Font f;
+			LOGFONT	lf;
+
+			lf = new LOGFONT();
+			f = new Font("Arial", 10);
+
+			f.ToLogFont(lf);
+			AssertEquals("lf1", -13, lf.lfHeight);
+			AssertEquals("lf2", 400, lf.lfWeight);
+			AssertEquals("lf3", 1, lf.lfCharSet);
+			AssertEquals("lf4", f.Name, lf.lfFaceName);
+		}
 	}
 }
